--- a/YFBLL/YFBLL.csproj
+++ b/YFBLL/YFBLL.csproj
@@ -45,6 +45,7 @@
   <ItemGroup>
     <Compile Include="Books.cs" />
     <Compile Include="Cart.cs" />
+    <Compile Include="CommentService.cs" />
     <Compile Include="Order.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="User.cs" />
